@@ -11,7 +11,13 @@ Pending changes in the mainline
   provides it.
 * The User profile can now contain an "id" field if the auth-service
   provides it.
-* New experimental feature: audit-logs (TODO) - config "EnableAuditLogs"
+* New experimental feature: audit-logs
+  - Enabled by the "EnableAuditLogs" configuration.
+  - Audit-logs are currently handled by the PostgreSQL plugin and can be 
+    browsed through the route /plugins/postgresql/audit-logs.
+  - New default permission "audit-logs" to grant access to the 
+    "/plugins/postgresql/audit-logs" route.
+
 
 
 2025-07-14 - v 0.9.4
